<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.UserFragments"
    android:background="@color/black">


    <RelativeLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingVertical="15dp">

        <TextView
            android:layout_marginStart="25dp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_alignParentStart="true"
            android:text="@string/explorer"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/moods_explorer"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:layout_marginEnd="25dp"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_baseline_color_lens_24" />


        <EditText
            android:id="@+id/search_users"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/textborder"
            android:drawableLeft="@drawable/search_bg"
            android:drawablePadding="5dp"
            android:hint="Search..."
            android:paddingLeft="8dp"
            android:shadowColor="@color/white"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/moodselection"
            android:background="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@id/search_users"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="10dp"
            app:tabIndicatorColor="@color/white"
            app:tabIndicatorHeight="1dp"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/romantic" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/broken" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excited" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attached" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confused" />

        </com.google.android.material.tabs.TabLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="160dp"
        android:visibility="gone"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:divider="@null"
        android:dividerHeight="0dp">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpagermood"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </androidx.viewpager.widget.ViewPager>


    <!-- empty state -->
    <include
        android:id="@+id/es_layout"
        android:visibility="gone"
        layout="@layout/empty_state" />


</RelativeLayout>