<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Login.UserActivity">


    <Button
        android:id="@+id/tag1"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/helper"
        android:textColor="@color/tagHelper"
        android:textSize="15sp"
        android:visibility="visible"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:strokeColor="@color/tagHelper"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/tag2"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/reformer"
        android:textColor="@color/tagReformer"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:strokeColor="@color/tagReformer"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/tag4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:gravity="top"
        android:onClick="ButtononClick"
        android:text="@string/peace_maker"
        android:textColor="@color/tagPeaceMaker"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        app:strokeColor="@color/tagPeaceMaker"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/selectyourtag"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/select_your_tag"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="#313131"
        android:ems="10"
        android:hint="@string/how_should_everyone_call_you"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/tag3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/loyalist"
        android:textColor="@color/tagLoyalist"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:strokeColor="@color/tagLoyalist"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/xrossorange"
        android:text="@string/get_started"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:background="@color/xrossgrey"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textVisiblePassword"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="119dp"
        android:layout_height="57dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="234dp"
        android:layout_height="43dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/pick_a_username"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="316dp"
        android:layout_height="39dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/you_can_always_change_this_later"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <Button
        android:id="@+id/tag5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/challenger"
        android:textColor="@color/tagChallenger"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        app:strokeColor="@color/tagChallenger"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/tag9"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/leader"
        android:textColor="@color/tagLeader"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777"
        app:strokeColor="@color/tagLeader"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/tag6"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/enthusiast"
        android:textColor="@color/tagEnthusiast"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698"
        app:strokeColor="@color/tagEnthusiast"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/tag7"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/investigator"
        android:textColor="@color/tagInvestigator"
        android:textSize="15sp"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698"
        app:strokeColor="@color/tagInvestigator"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/tag8"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:backgroundTint="@color/black"
        android:onClick="ButtononClick"
        android:text="@string/individualist"
        android:textColor="@color/tagIndividualist"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777"
        app:strokeColor="@color/tagIndividualist"
        app:strokeWidth="2dp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/selectedtag"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />
</androidx.constraintlayout.widget.ConstraintLayout>